Fixed alignment

--- a/scss/main/_settings.scss
+++ b/scss/main/_settings.scss
@@ -8,6 +8,7 @@
     width: 100%;
     height: 300px;
     z-index: 200;
+    padding: 15px;
 
     .closeSettings {
         cursor: pointer;
@@ -16,7 +17,7 @@
         width: 35px;
         height: 35px;
         position: absolute;
-        right: 10px;
+        right: 40px;
         top: 10px;
         display: flex;
         justify-content: center;
@@ -42,7 +43,6 @@
         padding: 8px 14px;
         transition: background-color 0.5s, color 0.3s;
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.158);
-        margin: 15px;
 
         &:hover {
             color: white;
